@@ -44,7 +44,6 @@ export(compare_vars)
 export(deduplicate_equivalence)
 export(get_inspect_pairs)
 export(greedy)
-export(identical)
 export(jaccard)
 export(jaro_winkler)
 export(lcs)
